# BuildOpenCV_cpp

./: App_builder.sh  BuildApp.sh  BuildOpenCV.sh  CMakeLists.txt  OpenCV_builder.sh  ReadMe.md  cpptest.cpp
